@@ -1,15 +1,0 @@
-=====================================================================
-== additional (paypal) trap calls test
-=====================================================================
-Channel = /dev/stdin, /dev/stdin, 0, 0x100, 0x10000, 0, 0
-Channel = /dev/stdout, /dev/stdout, 0, 0, 0, 0x100, 0x10000
-Channel = /dev/stderr, /dev/stderr, 0, 0, 0, 0x100, 0x10000
-
-=====================================================================
-== switches for zerovm. some of them used to control nexe, some
-== for the internal zerovm needs
-=====================================================================
-Version = 20140320
-Program = paypal.nexe
-Memory = 33554432, 0
-Timeout = 30
