@@ -1,6 +1,9 @@
 history of zerovm hypervisor project. please note that only most important
 news go here, otherwise github commits history can be used
 
+2014-03-21 dmitri bortoq <bortoq@gmail.com>
+  * channel: ZVM_SOCKETS removed
+
 2014-02-04 dmitri bortoq <bortoq@gmail.com>
   * channel: a new zerovm flavor created: no networking. sources removed* as
     well and now channels restored to original design
